--- a/src/theme-chalk/src/input.less
+++ b/src/theme-chalk/src/input.less
@@ -1,7 +1,7 @@
 @import "./mixins/_color";
 @import "./mixins/_input";
 
-.input-plain {
+.v-easy-input-plain {
   position: relative;
   min-height: 24px;
   min-width: 114px;
@@ -33,7 +33,7 @@
   textarea {
     padding: 4px 10px;
   }
-  .red {
+  .v-easy-input--error {
     box-shadow: 0 0 4px 1px @error;
   }
   .input-inner-spin {
