fix: fix button plain white color

--- a/src/theme-chalk/src/button.less
+++ b/src/theme-chalk/src/button.less
@@ -112,27 +112,27 @@ button.button.button-is {
   &-plain {
     background: none;
     border: 1px solid #eeeeee;
+  }
 
-    .easy-button {
-      &-primary {
-        color: @info-leave0;
-        border: 1px solid #eeeeee;
-      }
+  &-plain.easy-button {
+    &-primary {
+      border-color: @primary;
+      color: @primary;
+    }
 
-      &-success {
-        color: @success;
-        border: 1px solid #eeeeee;
-      }
+    &-success {
+      border-color: @success;
+      color: @success;
+    }
 
-      &-warning {
-        color: @warning;
-        border: 1px solid #eeeeee;
-      }
+    &-warning {
+      border-color: @warning;
+      color: @warning;
+    }
 
-      &-error {
-        color: @error;
-        border: 1px solid #eeeeee;
-      }
+    &-error {
+      border-color: @error;
+      color: @error;
     }
   }
 }
