feat: add scroll-bar components

--- a/src/theme-chalk/src/index.less
+++ b/src/theme-chalk/src/index.less
@@ -12,6 +12,7 @@
 @import "step";
 @import "icon";
 @import "color-picker";
+@import "scroll-bar";
 
 body, html {
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
