feat: business route-indicator docs

--- a/src/theme-chalk/src/route-indicator.less
+++ b/src/theme-chalk/src/route-indicator.less
@@ -25,6 +25,7 @@
     border-radius: @w;
     background-color: @primary;
     margin-right: 20px;
+    box-sizing: border-box;
 
     &:before {
       .round()
@@ -50,7 +51,7 @@
         margin-left: 4px;
       }
       span {
-        font-size: 15px;
+        font-size: 12px;
       }
     }
 
