--- a/src/theme-chalk/src/collapse.less
+++ b/src/theme-chalk/src/collapse.less
@@ -21,6 +21,8 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    margin-bottom: 10px;
+
     span {
       margin-left: 6px;
       cursor: pointer;
