fix: post-css warning start value has mixed support, consider using flex-start instead

--- a/src/theme-chalk/src/route-indicator.less
+++ b/src/theme-chalk/src/route-indicator.less
@@ -13,7 +13,7 @@
 .v-easy-route {
   position: relative;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   padding: 14px 30px 14px 10px;
 
   &-process {
