--- a/src/theme-chalk/src/mixins/_input.less
+++ b/src/theme-chalk/src/mixins/_input.less
@@ -51,6 +51,7 @@
         width: 100%;
         height: 100%;
         border: none;
+        box-sizing: border-box;
       }
       input:focus {
         outline: none;
