--- a/src/theme-chalk/src/image-preview.less
+++ b/src/theme-chalk/src/image-preview.less
@@ -23,6 +23,7 @@
     color: white;
     background: none;
     border: none;
+    z-index: 1;
     &:not(:disabled):hover {
       color: #3a8ee6;
     }
@@ -47,8 +48,8 @@
     right: 0;
     bottom: 0;
     margin: auto;
-    width: calc(100vw - 140px);
-    height: 90%;
+    width: 100%;
+    height: 100%;
     ul {
       display: flex;
       align-items: center;
@@ -56,6 +57,7 @@
       height: 100%;
       overflow-y: auto;
       overflow-x: hidden;
+      padding: 0;
       div {
         width: 100%;
         display: flex;
