--- a/src/theme-chalk/src/collapse.less
+++ b/src/theme-chalk/src/collapse.less
@@ -1,17 +1,18 @@
 /*
  collapse animation
  */
-.collapse-enter-active, .collapse-leave-active {
-  transition: height .2s;
+.collapse-enter-active,
+.collapse-leave-active {
+  transition: height 0.2s;
 }
-.collapse-enter, .collapse-leave-to {
+.collapse-enter,
+.collapse-leave-to {
   height: 0 !important;
 }
 
 .v-easy-collapse {
-
   .arrow {
-    transition: transform .2s;
+    transition: transform 0.2s;
   }
   .arrow-down {
     transform: rotateZ(180deg);
