--- a/src/theme-chalk/src/input-subnet.less
+++ b/src/theme-chalk/src/input-subnet.less
@@ -1,4 +1,4 @@
-@import "./mixins/_input";
+@import './mixins/_input';
 
 .input-subnet {
   .-input-children();
@@ -9,6 +9,7 @@
   }
 }
 
-.v-easy-error-enter, .v-easy-error-leave-to {
-  .-input-error()
+.v-easy-error-enter,
+.v-easy-error-leave-to {
+  .-input-error();
 }
