--- a/src/theme-chalk/src/route-indicator.less
+++ b/src/theme-chalk/src/route-indicator.less
@@ -1,4 +1,4 @@
-@import "mixins/_color";
+@import 'mixins/_color';
 
 @w: 16px;
 
@@ -28,11 +28,11 @@
     box-sizing: border-box;
 
     &:before {
-      .round()
+      .round();
     }
 
     &:after {
-      .round()
+      .round();
     }
   }
 
@@ -60,6 +60,4 @@
       margin-bottom: 10px;
     }
   }
-
 }
-
