--- a/src/theme-chalk/src/scroll-bar.less
+++ b/src/theme-chalk/src/scroll-bar.less
@@ -1,4 +1,4 @@
-@import "mixins/_color";
+@import 'mixins/_color';
 
 .v-easy-scroll {
   position: relative;
@@ -11,7 +11,6 @@
     margin-right: -17px;
     margin-bottom: -17px;
     &--view {
-
     }
   }
   &-bar {
@@ -19,7 +18,7 @@
       width: 0;
       height: 0;
       opacity: 0;
-      transition: opacity .3s;
+      transition: opacity 0.3s;
       border-radius: 2px;
       background-color: @bg-color;
       cursor: pointer;
