--- a/src/theme-chalk/src/image-preview.less
+++ b/src/theme-chalk/src/image-preview.less
@@ -1,4 +1,3 @@
-
 .image-read-parent {
   cursor: zoom-in;
 }
@@ -14,12 +13,13 @@
   z-index: 999;
   color: white;
   user-select: none;
-  .prev, .next {
+  .prev,
+  .next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-    transition: color .2s;
+    transition: color 0.2s;
     color: white;
     background: none;
     border: none;
@@ -62,7 +62,7 @@
         width: 100%;
         display: flex;
         align-items: center;
-        transition: transform .4s;
+        transition: transform 0.4s;
       }
       li {
         display: flex;
@@ -76,12 +76,13 @@
         }
       }
     }
-
   }
 }
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .3s;
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.3s;
 }
-.fade-enter, .fade-leave-to {
+.fade-enter,
+.fade-leave-to {
   opacity: 0;
 }
