fix: fix: fix route-indicator transition animation

--- a/src/theme-chalk/src/collapse.less
+++ b/src/theme-chalk/src/collapse.less
@@ -5,7 +5,7 @@
 .collapse-leave-active {
   transition: height 0.2s;
 }
-.collapse-enter,
+.collapse-enter-from,
 .collapse-leave-to {
   height: 0 !important;
 }
