style: prettier code

--- a/docs/.vuepress/templates/dev.html
+++ b/docs/.vuepress/templates/dev.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="API — v-easy-components">
-    <meta name="twitter:description" content="v-easy-components - Vue-based component library">
-    <meta property="og:type" content="article">
-    <meta property="og:title" content="API — v-easy-components">
-    <meta property="og:description" content="v-easy-components - Vue-based component library">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="API — v-easy-components" />
+    <meta
+      name="twitter:description"
+      content="v-easy-components - Vue-based component library"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="API — v-easy-components" />
+    <meta
+      property="og:description"
+      content="v-easy-components - Vue-based component library"
+    />
     <title></title>
   </head>
   <body>
