feat(AutoComplete): support prefix icon and suffix icon

--- a/src/theme-chalk/src/auto-complete.less
+++ b/src/theme-chalk/src/auto-complete.less
@@ -1,6 +1,8 @@
 @import "./mixins/_color.less";
 
 .auto-complete {
+  display: flex;
+  align-items: center;
   width: 160px;
   &-template {
     width: 160px;
