--- a/src/theme-chalk/src/input.less
+++ b/src/theme-chalk/src/input.less
@@ -1,67 +1,106 @@
 @import './mixins/_color';
 @import './mixins/_input';
 
-.v-easy-input-plain {
-  position: relative;
-  min-height: 24px;
-  min-width: 114px;
-  input[type='number']::-webkit-inner-spin-button {
-    -webkit-appearance: none;
+.v-easy-input {
+  &-small {
+    width: 180px;
+    height: 28px;
   }
-  input,
-  textarea {
-    color: @inputColor;
-    margin: auto;
-    padding: 2px 12px;
-    min-width: 64px;
-    min-height: 28px;
-    width: calc(100% - 24px);
-    border: 1px solid @border-color-leave1;
-    border-radius: 4px;
-    transition: box-shadow 0.4s;
-    box-sizing: content-box;
+  
+  &-middle {
+    width: 240px;
+    height: 34px;
   }
-  textarea:focus,
-  input:focus {
-    outline: none;
-    box-shadow: 0 0 4px 1px #4190f3;
+  &-large {
+    width: 280px;
+    height: 40px;
   }
-  textarea:disabled,
-  input:disabled {
-    background-color: #f5f7fa;
-    border-color: #e4e7ed;
-    color: #c0c4cc;
-    cursor: not-allowed;
-  }
-  textarea {
-    padding: 4px 10px;
-  }
-  .v-easy-input--error {
-    box-shadow: 0 0 4px 1px @error;
-  }
-  .input-inner-spin {
-    position: absolute;
-    right: -1px;
-    top: 0;
-    font-size: 10px;
-    i {
-      padding: 2px 10px;
-      display: block;
-      cursor: pointer;
-      border: 1px solid @border-color-leave0;
-      border-right: none;
-      border-bottom: none;
-      &:hover {
-        color: @primary;
-      }
-      &:first-child {
-        border-top-right-radius: 4px;
-      }
-      &:last-child {
-        border-bottom-right-radius: 4px;
+  &-plain {
+    position: relative;
+    display: flex;
+    align-items: center;
+    min-height: 24px;
+    min-width: 114px;
+    input[type='number']::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+    }
+    input,
+    textarea {
+      color: @inputColor;
+      margin: auto;
+      padding: 2px 12px;
+      width: 100%;
+      height: 100%;
+      border: 1px solid @border-color-leave1;
+      border-radius: 4px;
+      transition: box-shadow 0.4s;
+      box-sizing: border-box;
+    }
+    textarea:focus,
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 4px 1px #4190f3;
+    }
+    textarea:disabled,
+    input:disabled {
+      background-color: #f5f7fa;
+      border-color: #e4e7ed;
+      color: #c0c4cc;
+      cursor: not-allowed;
+    }
+    textarea {
+      padding: 4px 10px;
+    }
+    .icon() {
+      position: absolute;
+      color: @placeholder;
+      font-size: 16px;
+    }
+    .prefix-icon {
+      left: 5px;
+      .icon()
+    }
+    .suffix-icon {
+      right: 5px;
+      .icon()
+    }
+    .v-easy-input--prefix {
+      padding-left: 24px;
+    }
+    .v-easy-input--suffix {
+      padding-right: 24px;
+    }
+    .v-easy-input--error {
+      box-shadow: 0 0 4px 1px @error;
+    }
+    .input-inner-spin {
+      position: absolute;
+      right: 0;
+      top: 0;
+      font-size: 10px;
+      height: 100%;
+      i {
+        padding: 0 10px;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        border: 1px solid @border-color-leave1;
+        border-right: none;
+        border-bottom: none;
+        &:hover {
+          color: @primary;
+        }
+        &:first-child {
+          border-top-right-radius: 4px;
+        }
+        &:last-child {
+          border-bottom-right-radius: 4px;
+        }
       }
     }
   }
+  
 }
 
 .v-easy-error-enter,
