feat(AutoComplete): custom none rendering

--- a/src/theme-chalk/src/auto-complete.less
+++ b/src/theme-chalk/src/auto-complete.less
@@ -40,6 +40,7 @@
     &-loading {
       display: flex;
       justify-content: center;
+      padding: 20px 0;
       i {
         color: @info-leave0;
         animation: rotate 0.6s linear infinite;
